--- a/jennie.css
+++ b/jennie.css
@@ -34,7 +34,7 @@ body {
 #header>ul>li {
     float: left;
     line-height: 77px;
-    margin-left: 66px;
+    margin-left: 50px;
     position: relative;
 }
 #header>ul>li:hover a {
@@ -47,7 +47,7 @@ body {
     color: var(--maincolor);
 }
 #header>ul> .login_signup {
-    margin-left: 160px;
+    margin-left: 200px;
 }
 #header>ul>li>ul {
     width:250px;
@@ -97,18 +97,18 @@ body {
 }
 #banner>img {
     width: 100%;
-    height: 100%;
+    height: 99%;
 }
 #information {
-    height: 550px;
-    margin: 0 auto;
-    margin-top: 50px;
+    width: 1118px;
+    height: 515px;
+    margin: 40px auto 30px;
+    
 }
 #information> #box {
     width: 350px;
-    height: 515px;
+    height: 100%;
     float: left;
-    margin-right: 33px;
     border: 1px solid #DDDDDD;
 }
         
@@ -130,6 +130,9 @@ body {
     line-height: 20px;
     text-indent: 20px;
 } 
+#information> .box2 {
+    margin-left: 33px;
+}
          
 #information> .box2> img {
     width: 310px;
@@ -148,6 +151,7 @@ body {
 }
 #information>.box3 {
     overflow-y: scroll;
+    margin-left: 33px;
     
 }
 #information>.box3>h2 {
@@ -174,7 +178,7 @@ body {
     text-decoration: none;
     display:block;
     float: left;
-    width: 215px;
+    width: 220px;
     padding-left: 10px;
     text-align: justify;
     font-size: 15.5px;
@@ -182,7 +186,6 @@ body {
 }
 #information>.box3>.article:hover a {
     text-decoration: underline;
-    /* color: var(--maincolor); */
     color:blueviolet;
 }
  #information>.box3>.article> p {
